Agrego nav, pagina principal y modifico color

--- a/Sing_In.html
+++ b/Sing_In.html
@@ -7,12 +7,22 @@
     <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
 <body>
+    <nav>
+        <h1 class=Titulo_navegacion>TechZone</h1>
+        <img src="./IMG/Logo_navegacion.png" alt="Logo" width="100px" class="Logo_N">
+        <ul class="navegacion">
+            <li><a href="./Index.html">Home</a></li>
+            <li><a href="./Sing_up.html">Sing up</a></li>
+            <li><a href="./Sing_in.html">Sign in</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
     <form class="Sing_In">
         <label for="Usuario">User</label><br>
         <input type="text" name="Usuario" id="Usuario"><br>
         <label for="Contraseña">Password</label><br>
         <input type="password" name="Contraseña" id="Contraseña">
     </form>
-    <button class="Login">Login</button>
+    <button class="Login"><a href="./Principal.html">Login</a></button>
 </body>
 </html>
