--- a/Sing_up.html
+++ b/Sing_up.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
 <body>
+    <nav>
+        <h1 class=Titulo_navegacion>TechZone</h1>
+        <img src="./IMG/Logo_navegacion.png" alt="Logo" width="100px" class="Logo_N">
+        <ul class="navegacion">
+            <li><a href="./Index.html">Home</a></li>
+            <li><a href="./Sing_up.html">Sing up</a></li>
+            <li><a href="./Sing_in.html">Sign in</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
     <form class="Sing_Up">
         <label for="Usuario">User</label><br>
         <input type="text" name="Usuario" id="Usuario"><br>
