--- a/Index.html
+++ b/Index.html
@@ -17,25 +17,31 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <h1>TechZone</h1>
-    <p class="Texto_Inicio">!Bienvenidos a TechZone, tu destino tecnologico definitivo! 
-        Aqui encontraras una amplia gama de articulos electronicos de vanguardia para satisfacer todas tus necesidades tecnologicas.
-        En TechZone, nos enorgullece ofrecerte los productos mas innovadores y emocionantes del mercado. 
-        Desde los ultimos telefonos inteligentes hasta los dispositivos inteligentes para el hogar mas sofisticados, 
-        nuestra seleccion esta cuidadosamente curada para brindarte lo mejor de la tecnologia.
-        Nos esforzamos por ofrecerte una experiencia de compra excepcional. 
-        Nuestro equipo experto esta siempre disponible para responder a tus preguntas y asesorarte en la 
-        eleccion del producto perfecto para ti. Ademas, nos aseguramos de que tu experiencia de compra sea segura y conveniente, 
-        con opciones de pago faciles y envio rapido.
-        En TechZone, sabemos que la tecnologia es mas que solo dispositivos, es una forma de vida. 
-        Por eso, tambien ofrecemos una variedad de accesorios y servicios para complementar tus dispositivos y mejorar tu experiencia tecnologica.
-        Explora nuestra tienda en linea y descubre un mundo lleno de posibilidades tecnologicas. 
-        Desde los aficionados a la fotografia hasta los entusiastas de los videojuegos, en TechZone encontraras algo para todos.
-        Gracias por visitar TechZone, tu destino confiable para articulos electronicos de calidad. 
-        !Sumergete en el mundo de la tecnologia y descubre las infinitas posibilidades que tenemos para ofrecerte!
-    </p>
-    <h3>"Innovación en tus manos, en el mundo de TechZone"</h3>
+    <h2>"Innovación en tus manos, en el mundo de TechZone"</h2>
     <img src="./IMG/Logo_body.png" alt="Logo" width="400px" class="Logo_I">
+    <div class="Texto_Inicio">
+        <h1>TechZone</h1>
+        <p>!Bienvenidos a TechZone, tu destino tecnologico definitivo! 
+            Aqui encontraras una amplia gama de articulos electronicos de vanguardia para satisfacer todas tus necesidades tecnologicas.
+            En TechZone, nos enorgullece ofrecerte los productos mas innovadores y emocionantes del mercado. 
+            Desde los ultimos telefonos inteligentes hasta los dispositivos inteligentes para el hogar mas sofisticados, 
+            nuestra seleccion esta cuidadosamente curada para brindarte lo mejor de la tecnologia.
+            Nos esforzamos por ofrecerte una experiencia de compra excepcional. 
+            Nuestro equipo experto esta siempre disponible para responder a tus preguntas y asesorarte en la 
+            eleccion del producto perfecto para ti. Ademas, nos aseguramos de que tu experiencia de compra sea segura y conveniente, 
+            con opciones de pago faciles y envio rapido.
+            En TechZone, sabemos que la tecnologia es mas que solo dispositivos, es una forma de vida. 
+            Por eso, tambien ofrecemos una variedad de accesorios y servicios para complementar tus dispositivos y mejorar tu experiencia tecnologica.
+            Explora nuestra tienda en linea y descubre un mundo lleno de posibilidades tecnologicas. 
+            Desde los aficionados a la fotografia hasta los entusiastas de los videojuegos, en TechZone encontraras algo para todos.
+            Gracias por visitar TechZone, tu destino confiable para articulos electronicos de calidad. 
+            !Sumergete en el mundo de la tecnologia y descubre las infinitas posibilidades que tenemos para ofrecerte!
+        </p>
+    </div>
+    <img src="./IMG/Principal_3.jpg" alt="" width="450px" class="Imagen_3">
+
+
     <script src="./JS/Proyecto.js"></script>
+
 </body>
 </html>
