--- a/Principal.html
+++ b/Principal.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>TechZone</h1>
+    <img src="./IMG/Imagen_iphone_1.avif" alt="" width="400px">
+    <img src="./IMG/Imagen_iphone_2.webp" alt="" width="400px">
+    <img src="./IMG/Imagen_iphone_3.webp" alt="" width="400px">
 </body>
 </html>
