--- a/Sing_In.html
+++ b/Sing_In.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sing_In</title>
-    <link rel="stylesheet" href="./CSS/Styles.css">
+    <link rel="stylesheet" href="./CSS/Sing_In.css">
 </head>
-<body>
-    <nav>
-        <h1 class=Titulo_navegacion>TechZone</h1>
-        <img src="./IMG/Logo_navegacion.png" alt="Logo" width="100px" class="Logo_N">
-        <ul class="navegacion">
-            <li><a href="./Index.html">Home</a></li>
-            <li><a href="./Sing_up.html">Sing up</a></li>
-            <li><a href="./Sing_in.html">Sign in</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
-    <form class="Sing_In">
-        <label for="Usuario">User</label><br>
-        <input type="text" name="Usuario" id="Usuario"><br>
-        <label for="Contraseña">Password</label><br>
-        <input type="password" name="Contraseña" id="Contraseña">
-    </form>
-    <button class="Login"><a href="./Principal.html">Login</a></button>
-</body>
+<body class="cuerpo_In">
+    <div class="Sing_In">
+        <form>
+            <h1>Login </h1>
+            <div class="User">
+                <label for="Usuario">User</label><br>
+                <input type="text" name="Usuario" id="Usuario"><br>
+            </div>
+            <div class="User">
+                <label for="Contraseña">Password</label><br>
+                <input type="password" name="Contraseña" id="Contraseña"><br>
+            </div>
+        </form>
+        <div class="remeber">
+            <label for="remeber"> <input type="checkbox">Remeber me</label>
+            <a href="#">Forgot Password</a><br>
+        </div>
+        <button class="Login" id="Login" onclick="Login()"><a href="./Principal.html">Login</a></button><br>
+        <p>Don't Have an Account <a href="./Sing_up.html">Register</a></p>
+    
+    </div>
+    <script src="./JS/Proyecto.js"></script>
+    </body>
 </html>
