--- a/Sing_up.html
+++ b/Sing_up.html
@@ -6,7 +6,7 @@
     <title>Sing_Up</title>
     <link rel="stylesheet" href="./CSS/Styles.css">
 </head>
-<body>
+<body class="cuerpo_Up">
     <nav>
         <h1 class=Titulo_navegacion>TechZone</h1>
         <img src="./IMG/Logo_navegacion.png" alt="Logo" width="100px" class="Logo_N">
@@ -18,17 +18,22 @@
         </ul>
     </nav>
     <form class="Sing_Up">
-        <label for="Usuario">User</label><br>
-        <input type="text" name="Usuario" id="Usuario"><br>
-        <label for="Password">Password</label><br>
-        <input type="password" name="Password" id="Password"><br>
-        <label for="Genero">Genero</label><br>
-        <label for="Hombre">Hombre</label><br>
-        <input type="radio" name="Hombre" id="Hombre"><br>
-        <label for="Mujer">Mujer</label><br>
-        <input type="radio" name="Mujer" id="Mujer"><br>
+        <div class="Formulario_up">
+            <label for="Usuario">User</label><br>
+            <input type="text" name="Usuario" id="Usuario"><br>
+            <label for="Password">Password</label><br>
+            <input type="password" name="Password" id="Password" required><br>
+            <label for="Genero">Gender</label><br>
+            <label for="Hombre">Men</label><br>
+            <input type="radio" name="Hombre" id="Hombre"><br>
+            <label for="Mujer">Woman</label><br>
+            <input type="radio" name="Mujer" id="Mujer"><br>
+        </div>
     </form>
-    <button id="send">Send</button>
-    <a href="#"><p>Remember me</p></a>
+    <div class="Boton">
+        <a href="#"><p>Remember me</p></a>
+        <button id="send">Send</button>
+    </div>
+    <img src="./IMG/Principal_1.jpg" alt="" width="500px" class="imagen_up">
 </body>
 </html>
