Termino La pagina de Sing_in

--- a/Sing_In.html
+++ b/Sing_In.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="./CSS/Sing_In.css">
 </head>
 <body class="cuerpo_In">
+    <img src="./IMG/Background_1.jpg" alt="" class="imagen_background">
     <div class="Sing_In">
         <form>
             <h1>Login </h1>
             <div class="User">
                 <label for="Usuario">User</label><br>
-                <input type="text" name="Usuario" id="Usuario"><br>
+                <input type="text" name="Usuario" id="Usuario_login"><br>
             </div>
             <div class="User">
                 <label for="Contraseña">Password</label><br>
-                <input type="password" name="Contraseña" id="Contraseña"><br>
+                <input type="password" name="Contraseña" id="Contraseña_login"><br>
             </div>
         </form>
         <div class="remeber">
             <label for="remeber"> <input type="checkbox">Remeber me</label>
             <a href="#">Forgot Password</a><br>
         </div>
-        <button class="Login" id="Login" onclick="Login()"><a href="./Principal.html">Login</a></button><br>
+        <button class="Login" id="Login" onclick="Login()">Login</button><br>
         <p>Don't Have an Account <a href="./Sing_up.html">Register</a></p>
     
     </div>
