Modifico inicio y sing_up

--- a/Index.html
+++ b/Index.html
@@ -39,6 +39,53 @@
         </p>
     </div>
     <img src="./IMG/Principal_3.jpg" alt="" width="450px" class="Imagen_3">
+    <div class="Vision">
+        <h1>Vision</h1>
+        <p>TechZone es una plataforma en línea que ofrece una amplia gama de productos tecnológicos 
+            de última generación. Nuestra visión es convertirnos en el destino número uno para todos 
+            los entusiastas de la tecnología, brindando una experiencia de compra única y emocionante.
+            Al ingresar a TechZone, los visitantes serán recibidos por un diseño moderno y elegante que 
+            refleja nuestro compromiso con la innovación y la calidad. La página de inicio será atractiva y 
+            fácil de navegar, con imágenes llamativas de los productos más destacados y ofertas especiales.
+            Nuestra tienda en línea contará con categorías bien organizadas que permitirán a los clientes 
+            encontrar fácilmente lo que están buscando. Desde teléfonos inteligentes y computadoras portátiles
+            hasta dispositivos inteligentes para el hogar y accesorios, TechZone ofrecerá una amplia selección 
+            de productos de las marcas más reconocidas del mercado.</p>
+    </div>
+    <div class="Mision">
+        <h1>Mision</h1>
+        <p>La misión de TechZone es ofrecer a nuestros clientes una experiencia de compra en 
+            línea excepcional al proporcionarles una amplia gama de productos tecnológicos de 
+            calidad y las últimas novedades del mercado. Nos esforzamos por ser el destino 
+            preferido de los entusiastas de la tecnología, brindando un servicio al cliente 
+            excepcional y una selección cuidadosa de productos de marcas reconocidas.
+            En TechZone, nos comprometemos a ofrecer a nuestros clientes una plataforma 
+            fácil de usar y amigable, donde puedan encontrar rápidamente los productos que 
+            desean, obtener información detallada sobre cada uno y realizar compras seguras 
+            y confiables. Nuestro objetivo es proporcionar una experiencia de compra fluida y 
+            sin complicaciones, respaldada por un equipo de atención al cliente dedicado y amable 
+            que esté dispuesto a ayudar en todo momento.
+            Además, nos esforzamos por mantenernos actualizados con las últimas tendencias 
+            tecnológicas y ofrecer productos innovadores y de alta calidad. Buscamos establecer 
+            relaciones sólidas con nuestros proveedores para garantizar que nuestros clientes 
+            siempre tengan acceso a los productos más nuevos y emocionantes del mercado </p>
+    </div>
+    <div class="Lista_productos">
+        <h2>Nuestros productos</h2>
+        <ul>
+            <li>
+                Celulares <br>
+                <img src="./IMG/Imagen_iphone_1.avif" width="300px"> <br>
+            </li>
+            <li>
+                Computadores <br>
+                <img src="" width="200px">
+            </li>
+        </ul>
+    </div>
+    <tfoot>
+        
+    </tfoot>
 
 
     <script src="./JS/Proyecto.js"></script>
