--- a/Sing_up.html
+++ b/Sing_up.html
@@ -9,7 +9,7 @@
 <body class="cuerpo_Up">
     <nav>
         <h1 class=Titulo_navegacion>TechZone</h1>
-        <img src="./IMG/Logo_navegacion.png" alt="Logo" width="100px" class="Logo_N">
+        <a href=""></a><img src="./IMG/Logo_navegacion.png" alt="Logo" width="100px" class="Logo_N">
         <ul class="navegacion">
             <li><a href="./Index.html">Home</a></li>
             <li><a href="./Sing_up.html">Sing up</a></li>
@@ -19,20 +19,28 @@
     </nav>
     <form class="Sing_Up">
         <div class="Formulario_up">
-            <label for="Usuario">User</label><br>
-            <input type="text" name="Usuario" id="Usuario"><br>
-            <label for="Password">Password</label><br>
-            <input type="password" name="Password" id="Password" required><br>
-            <label for="Genero">Gender</label><br>
-            <label for="Hombre">Men</label><br>
-            <input type="radio" name="Hombre" id="Hombre"><br>
-            <label for="Mujer">Woman</label><br>
-            <input type="radio" name="Mujer" id="Mujer"><br>
+            <div class="Input_user">
+                <label for="Usuario">User</label><br>
+                <input type="text" name="Usuario" id="Usuario"><br>
+            </div>
+            <div class="Input_user">
+                <label for="Password">Password</label><br>
+                <input type="password" name="Password" id="Password" required><br>
+            </div>
+            <div>
+                <label for="Genero">Gender</label><br>
+                <label for="Hombre">Men</label><br>
+                <input type="radio" name="Hombre" id="Hombre"><br>
+            </div>
+            <div>
+                <label for="Mujer">Woman</label><br>
+                <input type="radio" name="Mujer" id="Mujer"><br>
+            </div>
         </div>
     </form>
     <div class="Boton">
         <a href="#"><p>Remember me</p></a>
-        <button id="send">Send</button>
+        <button id="send" onclick="Register()">Send</button>
     </div>
     <img src="./IMG/Principal_1.jpg" alt="" width="500px" class="imagen_up">
 </body>
