Termino Tfooter del index y avanzo pagina principal

--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>TechZone</title>
     <link rel="stylesheet" href="./CSS/Styles.css">
+    <link rel="shortcut icon" href="IMG/red-mundial.png" type="images/x-icon">
 </head>
 <body>
     <nav>
@@ -14,77 +15,114 @@
             <li><a href="./Index.html">Home</a></li>
             <li><a href="./Sing_up.html">Sing up</a></li>
             <li><a href="./Sing_in.html">Sign in</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="Index.html/#Contacto">Contact</a></li>
         </ul>
     </nav>
-    <h2>"Innovación en tus manos, en el mundo de TechZone"</h2>
-    <img src="./IMG/Logo_body.png" alt="Logo" width="400px" class="Logo_I">
-    <div class="Texto_Inicio">
-        <h1>TechZone</h1>
-        <p>!Bienvenidos a TechZone, tu destino tecnologico definitivo! 
-            Aqui encontraras una amplia gama de articulos electronicos de vanguardia para satisfacer todas tus necesidades tecnologicas.
-            En TechZone, nos enorgullece ofrecerte los productos mas innovadores y emocionantes del mercado. 
-            Desde los ultimos telefonos inteligentes hasta los dispositivos inteligentes para el hogar mas sofisticados, 
-            nuestra seleccion esta cuidadosamente curada para brindarte lo mejor de la tecnologia.
-            Nos esforzamos por ofrecerte una experiencia de compra excepcional. 
-            Nuestro equipo experto esta siempre disponible para responder a tus preguntas y asesorarte en la 
-            eleccion del producto perfecto para ti. Ademas, nos aseguramos de que tu experiencia de compra sea segura y conveniente, 
-            con opciones de pago faciles y envio rapido.
-            En TechZone, sabemos que la tecnologia es mas que solo dispositivos, es una forma de vida. 
-            Por eso, tambien ofrecemos una variedad de accesorios y servicios para complementar tus dispositivos y mejorar tu experiencia tecnologica.
-            Explora nuestra tienda en linea y descubre un mundo lleno de posibilidades tecnologicas. 
-            Desde los aficionados a la fotografia hasta los entusiastas de los videojuegos, en TechZone encontraras algo para todos.
-            Gracias por visitar TechZone, tu destino confiable para articulos electronicos de calidad. 
-            !Sumergete en el mundo de la tecnologia y descubre las infinitas posibilidades que tenemos para ofrecerte!
-        </p>
+    <div class="lema">
+        <h2>"Innovación en tus manos, en el mundo de TechZone"</h2>
     </div>
-    <img src="./IMG/Principal_3.jpg" alt="" width="450px" class="Imagen_3">
-    <div class="Vision">
+    <div class="logo_principal">
+        <img src="./IMG/Logo_body.png" alt="Logo" width="400px">
+    </div>
+    <div class="titulo_inicio">
+        <h1>TechZone</h1> <br>
+    </div>
+    <div class="Texto_Inicio"></div>
+        <div class="parrafo_inicio">
+            <p>!Bienvenidos a TechZone, tu destino tecnologico definitivo! 
+                Aqui encontraras una amplia gama de articulos electronicos de vanguardia para satisfacer todas tus necesidades tecnologicas.
+                En TechZone, nos enorgullece ofrecerte los productos mas innovadores y emocionantes del mercado. 
+                Desde los ultimos telefonos inteligentes hasta los dispositivos inteligentes para el hogar mas sofisticados, 
+                nuestra seleccion esta cuidadosamente curada para brindarte lo mejor de la tecnologia.
+                Nos esforzamos por ofrecerte una experiencia de compra excepcional. 
+                Nuestro equipo experto esta siempre disponible para responder a tus preguntas y asesorarte en la 
+                eleccion del producto perfecto para ti. Ademas, nos aseguramos de que tu experiencia de compra sea segura y conveniente, 
+                con opciones de pago faciles y envio rapido.
+                En TechZone, sabemos que la tecnologia es mas que solo dispositivos, es una forma de vida. 
+                Por eso, tambien ofrecemos una variedad de accesorios y servicios para complementar tus dispositivos y mejorar tu experiencia tecnologica.
+                Explora nuestra tienda en linea y descubre un mundo lleno de posibilidades tecnologicas. 
+                Desde los aficionados a la fotografia hasta los entusiastas de los videojuegos, en TechZone encontraras algo para todos.
+                Gracias por visitar TechZone, tu destino confiable para articulos electronicos de calidad. 
+                !Sumergete en el mundo de la tecnologia y descubre las infinitas posibilidades que tenemos para ofrecerte!
+            </p>
+        </div>
+        <div class="Imagen_inicio">
+            <img src="./IMG/Principal_1.jpg" alt="" width="450px">
+        </div>
+    </div>
+
+
+    <div class="titulo_vision">
         <h1>Vision</h1>
-        <p>TechZone es una plataforma en línea que ofrece una amplia gama de productos tecnológicos 
-            de última generación. Nuestra visión es convertirnos en el destino número uno para todos 
-            los entusiastas de la tecnología, brindando una experiencia de compra única y emocionante.
-            Al ingresar a TechZone, los visitantes serán recibidos por un diseño moderno y elegante que 
-            refleja nuestro compromiso con la innovación y la calidad. La página de inicio será atractiva y 
-            fácil de navegar, con imágenes llamativas de los productos más destacados y ofertas especiales.
-            Nuestra tienda en línea contará con categorías bien organizadas que permitirán a los clientes 
-            encontrar fácilmente lo que están buscando. Desde teléfonos inteligentes y computadoras portátiles
-            hasta dispositivos inteligentes para el hogar y accesorios, TechZone ofrecerá una amplia selección 
-            de productos de las marcas más reconocidas del mercado.</p>
+    </div>
+    <div class="Vision">
+        <div class="parrafo_vision">
+            <p>TechZone es una plataforma en línea que ofrece una amplia gama de productos tecnológicos 
+                de última generación. Nuestra visión es convertirnos en el destino número uno para todos 
+                los entusiastas de la tecnología, brindando una experiencia de compra única y emocionante.
+                Al ingresar a TechZone, los visitantes serán recibidos por un diseño moderno y elegante que 
+                refleja nuestro compromiso con la innovación y la calidad. La página de inicio será atractiva y 
+                fácil de navegar, con imágenes llamativas de los productos más destacados y ofertas especiales.
+                Nuestra tienda en línea contará con categorías bien organizadas que permitirán a los clientes 
+                encontrar fácilmente lo que están buscando. Desde teléfonos inteligentes y computadoras portátiles
+                hasta dispositivos inteligentes para el hogar y accesorios, TechZone ofrecerá una amplia selección 
+                de productos de las marcas más reconocidas del mercado.
+            </p>
+        </div>
+    </div>
+    <div>
+        <h1>Mision</h1>
     </div>
     <div class="Mision">
-        <h1>Mision</h1>
-        <p>La misión de TechZone es ofrecer a nuestros clientes una experiencia de compra en 
-            línea excepcional al proporcionarles una amplia gama de productos tecnológicos de 
-            calidad y las últimas novedades del mercado. Nos esforzamos por ser el destino 
-            preferido de los entusiastas de la tecnología, brindando un servicio al cliente 
-            excepcional y una selección cuidadosa de productos de marcas reconocidas.
-            En TechZone, nos comprometemos a ofrecer a nuestros clientes una plataforma 
-            fácil de usar y amigable, donde puedan encontrar rápidamente los productos que 
-            desean, obtener información detallada sobre cada uno y realizar compras seguras 
-            y confiables. Nuestro objetivo es proporcionar una experiencia de compra fluida y 
-            sin complicaciones, respaldada por un equipo de atención al cliente dedicado y amable 
-            que esté dispuesto a ayudar en todo momento.
-            Además, nos esforzamos por mantenernos actualizados con las últimas tendencias 
-            tecnológicas y ofrecer productos innovadores y de alta calidad. Buscamos establecer 
-            relaciones sólidas con nuestros proveedores para garantizar que nuestros clientes 
-            siempre tengan acceso a los productos más nuevos y emocionantes del mercado </p>
+        <div>
+            <p>La misión de TechZone es ofrecer a nuestros clientes una experiencia de compra en 
+                línea excepcional al proporcionarles una amplia gama de productos tecnológicos de 
+                calidad y las últimas novedades del mercado. Nos esforzamos por ser el destino 
+                preferido de los entusiastas de la tecnología, brindando un servicio al cliente 
+                excepcional y una selección cuidadosa de productos de marcas reconocidas.
+                En TechZone, nos comprometemos a ofrecer a nuestros clientes una plataforma 
+                fácil de usar y amigable, donde puedan encontrar rápidamente los productos que 
+                desean, obtener información detallada sobre cada uno y realizar compras seguras 
+                y confiables. Nuestro objetivo es proporcionar una experiencia de compra fluida y 
+                sin complicaciones, respaldada por un equipo de atención al cliente dedicado y amable 
+                que esté dispuesto a ayudar en todo momento.
+                Además, nos esforzamos por mantenernos actualizados con las últimas tendencias 
+                tecnológicas y ofrecer productos innovadores y de alta calidad. Buscamos establecer 
+                relaciones sólidas con nuestros proveedores para garantizar que nuestros clientes 
+                siempre tengan acceso a los productos más nuevos y emocionantes del mercado 
+            </p>    
+        </div>
+    </div>
+    <div class="titulo_lista">
+        <h2>Nuestros productos</h2>
     </div>
     <div class="Lista_productos">
-        <h2>Nuestros productos</h2>
         <ul>
             <li>
-                Celulares <br>
+                <h3>Celulares</h3> <br>
                 <img src="./IMG/Imagen_iphone_1.avif" width="300px"> <br>
             </li>
+
             <li>
-                Computadores <br>
-                <img src="" width="200px">
+                <h3>Computadores</h3> <br>
+                <img src="./IMG/Computador_1.jpg" width="300px">
+            </li>
+            <li>
+                <h3>Entretenimiento</h3>
+                <img src="./IMG/playstation_1.webp" width="300px">
             </li>
         </ul>
     </div>
     <tfoot>
-        
+        <div class="titulo_tfooter">
+            <h2 id="Contacto">Contacts</h2>
+        </div>
+        <div class="imgenes_tfooter">
+            <a href="mailto:dylanrios211@gmail.com"><img src="./IMG/gmail.png"  width="150px"></a>
+            <a href="https://www.instagram.com/"><img src="./IMG/instagram.png" width="150px"></a>
+            <a href="https://www.twitter.com"><img src="./IMG/twitter.png" width="150px"></a>
+            <a href="tel:3135057694"><img src="./IMG/whatsapp-logo.png" width="150px"></a>
+        </div>
     </tfoot>
 
 
