--- a/Principal.html
+++ b/Principal.html
@@ -4,11 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./CSS/Styles.css">
+    <link rel="shortcut icon" href="IMG/red-mundial.png" type="images/x-icon">
 </head>
-<body>
-    <h1>TechZone</h1>
-    <img src="./IMG/Imagen_iphone_1.avif" alt="" width="400px">
-    <img src="./IMG/Imagen_iphone_2.webp" alt="" width="400px">
-    <img src="./IMG/Imagen_iphone_3.webp" alt="" width="400px">
+<body class="body_principal">
+    <div class="caja_usuario">
+        <h3 id="nombre_usuario"></h3>
+    </div>
+    <div class="caja_sesion">
+        <button id="cerra_sesion">Cerrar Sesion</button>
+    </div>
+    <div class="nombre_principal">
+        <h1>TechZone</h1>
+    </div>
+    <div class="lema">
+        <h2>"Innovación en tus manos, en el mundo de TechZone"</h2>
+    </div>
+    <div class="parrafo_principal">
+        <p>La tecnología ha adquirido una importancia indiscutible en nuestra sociedad actual. 
+            A medida que avanza el tiempo, el papel de la tecnología se vuelve cada vez más relevante 
+            en nuestras vidas diarias, ya sea en el ámbito personal, profesional o social.
+            Uno de los aspectos más destacados de la importancia de la tecnología es su capacidad para 
+            mejorar la eficiencia y la productividad en diferentes sectores. Gracias a los avances 
+            tecnológicos, ahora podemos realizar tareas de manera más rápida y precisa, lo que nos 
+            permite ahorrar tiempo y recursos. Por ejemplo, en el campo de la medicina, la tecnología 
+            ha permitido el desarrollo de dispositivos médicos avanzados que ayudan en el diagnóstico 
+            y tratamiento de enfermedades, mejorando así la calidad de vida de las personas.
+            Además, la tecnología también ha transformado la forma en que nos comunicamos y nos 
+            relacionamos con los demás. Las redes sociales y las aplicaciones de mensajería instantánea 
+            nos permiten estar conectados en todo momento, facilitando la comunicación y el intercambio 
+            de información a través de distancias geográficas. Esto ha abierto nuevas oportunidades para 
+            el comercio electrónico, el aprendizaje en línea y la colaboración internacional.
+            Otro aspecto clave de la importancia de la tecnología es su capacidad para impulsar la 
+            innovación y el progreso. La tecnología nos desafía a pensar de manera creativa y a buscar 
+            soluciones novedosas para los problemas que enfrentamos. Gracias a la tecnología, hemos sido 
+            testigos de avances significativos en áreas como la inteligencia artificial, la realidad 
+            virtual y la energía renovable, entre otros. Estos avances no solo mejoran nuestras vidas, 
+            sino que también tienen el potencial de resolver desafíos globales y crear un futuro más sostenible.
+            Sin embargo, a pesar de todas las ventajas que ofrece la tecnología, también es importante 
+            reconocer los desafíos y riesgos asociados. Debemos utilizar la tecnología de manera responsable 
+            y ética, teniendo en cuenta su impacto en la privacidad, la seguridad y la desigualdad social. 
+            Además, es fundamental garantizar el acceso equitativo a la tecnología, para evitar la brecha 
+            digital y asegurar que todos puedan beneficiarse de sus avances.
+            En resumen, la importancia de la tecnología radica en su capacidad para mejorar la eficiencia, 
+            facilitar la comunicación, impulsar la innovación y transformar nuestras vidas en muchos aspectos. 
+            Es un recurso poderoso que nos desafía a crecer y adaptarnos a un mundo en constante cambio. 
+            Aprovechemos sus beneficios mientras trabajamos juntos para enfrentar los desafíos que surgen 
+            a medida que avanzamos en la era tecnológica.</p>
+    </div>
+    <div class="lista_logos">
+        <ul>
+            <li>
+                <h3>Samsung</h3><br>
+                <img src="./IMG/logo_samsung.jpg" width="300px" onclick="Logo_1()"><br>
+            </li>
+            <li>
+                <h3>Iphone</h3><br>
+                <img src="./IMG/logo_iphone.png" width="300px" onclick="Logo_2()"><br>
+            </li>
+            <li>
+                <h3>Playstation</h3><br>
+                <img src="./IMG/logo_playstation.png" width="300px" onclick="Logo_3()"><br>
+            </li>
+            <li>
+                <h3>Xiaomi</h3><br>
+                <img src="./IMG/logo_xiaomi.webp" width="300px" onclick="Logo_4()"><br>
+            </li>
+            <li>
+                <h3>Motorola</h3><br>
+                <img src="./IMG/logo_motorola.png" width="300px" onclick="Logo_5()"><br>
+            </li>
+
+        </ul>
+    </div>
 </body>
 </html>
