--- a/Sing_In.html
+++ b/Sing_In.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sing_In</title>
     <link rel="stylesheet" href="./CSS/Sing_In.css">
+    <link rel="shortcut icon" href="IMG/red-mundial.png" type="images/x-icon">
 </head>
 <body class="cuerpo_In">
-    <img src="./IMG/Background_1.jpg" alt="" class="imagen_background">
     <div class="Sing_In">
         <form>
             <h1>Login </h1>
@@ -26,8 +26,8 @@
         </div>
         <button class="Login" id="Login" onclick="Login()">Login</button><br>
         <p>Don't Have an Account <a href="./Sing_up.html">Register</a></p>
-    
-    </div>
+    </div>  
+    <p id="mensajeError"></p>
     <script src="./JS/Proyecto.js"></script>
     </body>
 </html>
