--- a/Sing_up.html
+++ b/Sing_up.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sing_Up</title>
     <link rel="stylesheet" href="./CSS/Styles.css">
+    <link rel="shortcut icon" href="IMG/red-mundial.png" type="images/x-icon">
 </head>
 <body class="cuerpo_Up">
     <nav>
@@ -17,31 +18,41 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <form class="Sing_Up">
-        <div class="Formulario_up">
+    <div class="Formulario_up">
+        <form>
+            <h2>Register</h2>
             <div class="Input_user">
-                <label for="Usuario">User</label><br>
+                <label for="nombre">Name:</label>
+                <input type="text" id="nombre" required>
+            </div>
+            <div class="Input_user">
+                <label for="apellido">Last Name:</label>
+                <input type="text" id="apellido" required>
+            </div>
+            <div class="Input_user">
+                <label for="correo">Mail:</label>
+                <input type="email" id="correo" required>
+            </div>
+            <div class="Input_user">
+                <label for="Usuario">User:</label><br>
                 <input type="text" name="Usuario" id="Usuario"><br>
             </div>
             <div class="Input_user">
-                <label for="Password">Password</label><br>
-                <input type="password" name="Password" id="Password" required><br>
+                <label for="Password">Password:</label><br>
+                <input type="password" name="Password" id="Contraseña" required><br>
             </div>
-            <div>
+            <div class="sexo">
                 <label for="Genero">Gender</label><br>
-                <label for="Hombre">Men</label><br>
-                <input type="radio" name="Hombre" id="Hombre"><br>
-            </div>
+                <select id="sexo">
+                    <option value="masculino">Male</option>
+                    <option value="femenino">Female</option>
+                    <option value="others">Others</option>
+                </select>
             <div>
-                <label for="Mujer">Woman</label><br>
-                <input type="radio" name="Mujer" id="Mujer"><br>
+            <div class="Boton">
+                <button id="send" onclick="Register()">Send</button>
             </div>
-        </div>
-    </form>
-    <div class="Boton">
-        <a href="#"><p>Remember me</p></a>
-        <button id="send" onclick="Register()">Send</button>
+        </form>
     </div>
-    <img src="./IMG/Principal_1.jpg" alt="" width="500px" class="imagen_up">
 </body>
 </html>
