Termino pagina de inicio

--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
     <div class="titulo_inicio">
         <h1>TechZone</h1> <br>
     </div>
-    <div class="Texto_Inicio"></div>
+    <div class="Texto_Inicio">
         <div class="parrafo_inicio">
             <p>!Bienvenidos a TechZone, tu destino tecnologico definitivo! 
                 Aqui encontraras una amplia gama de articulos electronicos de vanguardia para satisfacer todas tus necesidades tecnologicas.
@@ -46,8 +46,8 @@
                 !Sumergete en el mundo de la tecnologia y descubre las infinitas posibilidades que tenemos para ofrecerte!
             </p>
         </div>
-        <div class="Imagen_inicio">
-            <img src="./IMG/Principal_1.jpg" alt="" width="450px">
+        <div class="imagen_inicio">
+            <img src="./IMG/Principal_1.jpg" alt="" width="500px">
         </div>
     </div>
 
@@ -56,6 +56,9 @@
         <h1>Vision</h1>
     </div>
     <div class="Vision">
+        <div class="imagen_vision">
+            <img src="./IMG/imagen_sing.jpg" width="450px">
+        </div>
         <div class="parrafo_vision">
             <p>TechZone es una plataforma en línea que ofrece una amplia gama de productos tecnológicos 
                 de última generación. Nuestra visión es convertirnos en el destino número uno para todos 
@@ -70,11 +73,11 @@
             </p>
         </div>
     </div>
-    <div>
+    <div class="titulo_mision">
         <h1>Mision</h1>
     </div>
     <div class="Mision">
-        <div>
+        <div class="parrafo_mision">
             <p>La misión de TechZone es ofrecer a nuestros clientes una experiencia de compra en 
                 línea excepcional al proporcionarles una amplia gama de productos tecnológicos de 
                 calidad y las últimas novedades del mercado. Nos esforzamos por ser el destino 
@@ -91,6 +94,9 @@
                 relaciones sólidas con nuestros proveedores para garantizar que nuestros clientes 
                 siempre tengan acceso a los productos más nuevos y emocionantes del mercado 
             </p>    
+        </div>
+        <div class="imagen_mision">
+            <img src="./IMG/principal_2.jpg" width="450px">
         </div>
     </div>
     <div class="titulo_lista">
