Agrego productos a la pagina principal

--- a/Principal.html
+++ b/Principal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TechZone</title>
     <link rel="stylesheet" href="./CSS/Styles.css">
     <link rel="shortcut icon" href="IMG/red-mundial.png" type="images/x-icon">
 </head>
@@ -12,7 +12,7 @@
         <h3 id="nombre_usuario"></h3>
     </div>
     <div class="caja_sesion">
-        <button id="cerra_sesion">Cerrar Sesion</button>
+        <button id="cerra_sesion" onclick="SignOff()">Cerrar Sesion</button>
     </div>
     <div class="nombre_principal">
         <h1>TechZone</h1>
@@ -52,30 +52,71 @@
             Aprovechemos sus beneficios mientras trabajamos juntos para enfrentar los desafíos que surgen 
             a medida que avanzamos en la era tecnológica.</p>
     </div>
-    <div class="lista_logos">
+    <div class="logo_samsung">
+        <img src="./IMG/logo_samsung.jpg" width="300px" onclick="Logo_1()"><br>
+    </div>
+        <div class="logos_1">
+            <h2>Samsung Galaxy A31 5G</h2>
+            <img src="./IMG/samsung_1.webp" width="150px">
+            <h2>Samsung Galaxy S10+</h2>
+            <img src="./IMG/samsung_2.webp" width="200px">
+            <h2>Samsung Galaxy A51 5G</h2>
+            <img src="./IMG/samsung_3.webp" width="200px">
+        </div> 
+        <div class="logo_2">
+            <h2>Televisor Samsung Cu7000 Crystal Uhd 55 pulgadas 2023</h2>
+            <img src="./IMG/samsung_4.webp" width="200px">
+            <h2>Lavadora secadora Samsung eléctrica 18 kg</h2>
+            <img src="./IMG/samsung_5.webp" width="200px">
+            <h2>Nevera</h2>
+            <img src="./IMG/samsung_6.webp" width="200px"> 
+        </div>
+    <div class="logo_playstation">
+        <img src="./IMG/logo_playstation.png" width="300px" onclick="Logo_3()"><br>
+    </div>
+    <div class="imagenes_playstation">
         <ul>
             <li>
-                <h3>Samsung</h3><br>
-                <img src="./IMG/logo_samsung.jpg" width="300px" onclick="Logo_1()"><br>
+                <h2>Playstation 5 Pro</h2>
+                <img src="./IMG/playstation_1.webp" width="300px">
             </li>
             <li>
-                <h3>Iphone</h3><br>
-                <img src="./IMG/logo_iphone.png" width="300px" onclick="Logo_2()"><br>
+                <h2>Mandos PS4</h2>
+                <img src="./IMG/playstation_2.webp" width="300px">
             </li>
             <li>
-                <h3>Playstation</h3><br>
-                <img src="./IMG/logo_playstation.png" width="300px" onclick="Logo_3()"><br>
+                <h2>Playstation 4 Slim</h2>
+                <img src="./IMG/playstation_3.webp" width="300px">
             </li>
             <li>
-                <h3>Xiaomi</h3><br>
-                <img src="./IMG/logo_xiaomi.webp" width="300px" onclick="Logo_4()"><br>
+                <h2>The Last Of Us</h2>
+                <img src="./IMG/playstation_4.webp" width="300px">
             </li>
             <li>
-                <h3>Motorola</h3><br>
-                <img src="./IMG/logo_motorola.png" width="300px" onclick="Logo_5()"><br>
+                <h2>PlayStation Portal</h2>
+                <img src="./IMG/playstation_5.webp" width="300px">
             </li>
-
         </ul>
     </div>
+    <div class="logo_iphone">
+        <img src="./IMG/logo_iphone.png" width="300px"><br>
+    </div>
+    <div class="imagenes_iphone">
+        <ul>
+            <li>
+                <h2>Iphone 13Pro</h2>
+                <img src="./IMG/Imagen_iphone_1.avif" width="300px">
+            </li>
+            <li>
+                <h2>iPad Pro</h2>
+                <img src="./IMG/iphone_1.jpg" width="300px">
+            </li>
+            <li>
+                <h2>Ipad iOS 12</h2>
+                <img src="./IMG/iphone_2.jpg" width="300px">
+            </li>
+        </ul>
+    </div>
+    <script src="./JS/Proyecto.js"></script>
 </body>
 </html>
