--- a/Sing_up.html
+++ b/Sing_up.html
@@ -22,20 +22,16 @@
         <form>
             <h2>Register</h2>
             <div class="Input_user">
-                <label for="nombre">Name:</label>
+                <label for="Nombre">Name:</label>
                 <input type="text" id="nombre" required>
             </div>
             <div class="Input_user">
-                <label for="apellido">Last Name:</label>
+                <label for="Apellido">Last Name:</label>
                 <input type="text" id="apellido" required>
             </div>
             <div class="Input_user">
-                <label for="correo">Mail:</label>
+                <label for="Correo">Mail:</label>
                 <input type="email" id="correo" required>
-            </div>
-            <div class="Input_user">
-                <label for="Usuario">User:</label><br>
-                <input type="text" name="Usuario" id="Usuario"><br>
             </div>
             <div class="Input_user">
                 <label for="Password">Password:</label><br>
@@ -54,5 +50,6 @@
             </div>
         </form>
     </div>
+    <script src="./JS/Proyecto.js"></script>
 </body>
 </html>
