Termino pagina principal

--- a/Principal.html
+++ b/Principal.html
@@ -55,21 +55,39 @@
     <div class="logo_samsung">
         <img src="./IMG/logo_samsung.jpg" width="300px" onclick="Logo_1()"><br>
     </div>
-        <div class="logos_1">
-            <h2>Samsung Galaxy A31 5G</h2>
-            <img src="./IMG/samsung_1.webp" width="150px">
-            <h2>Samsung Galaxy S10+</h2>
-            <img src="./IMG/samsung_2.webp" width="200px">
-            <h2>Samsung Galaxy A51 5G</h2>
-            <img src="./IMG/samsung_3.webp" width="200px">
-        </div> 
-        <div class="logo_2">
-            <h2>Televisor Samsung Cu7000 Crystal Uhd 55 pulgadas 2023</h2>
-            <img src="./IMG/samsung_4.webp" width="200px">
-            <h2>Lavadora secadora Samsung eléctrica 18 kg</h2>
-            <img src="./IMG/samsung_5.webp" width="200px">
-            <h2>Nevera</h2>
-            <img src="./IMG/samsung_6.webp" width="200px"> 
+        <div class="imagenes_samsung">
+            <ul>
+                <li>
+                    <h2>Samsung Galaxy A31 5G</h2>
+                    <p><strong>200$</strong></p>
+                    <img src="./IMG/samsung_1.webp" width="200px">
+                </li>
+                <li>
+                    <h2>Samsung Galaxy S10+</h2>
+                    <p><strong>300$</strong></p>
+                    <img src="./IMG/samsung_2.webp" width="300px">
+                </li>
+                <li>
+                    <h2>Samsung Galaxy A51 5G</h2>
+                    <p><strong>180$</strong></p>
+                    <img src="./IMG/samsung_3.webp" width="200px">
+                </li>
+                <li>
+                    <h2>Televisor Samsung Cu7000 Crystal  <br>Uhd 55 pulgadas 2023</h2>
+                    <p><strong>500$</strong></p>
+                    <img src="./IMG/samsung_4.webp" width="300px">
+                </li>
+                <li>
+                    <h2>Lavadora secadora Samsung  <br>eléctrica 18 kg</h2>
+                    <p><strong>450$</strong></p>
+                    <img src="./IMG/samsung_5.webp" width="200px">
+                </li>
+                <li>
+                    <h2>Nevera</h2>
+                    <p><strong> 400$</strong></p>
+                    <img src="./IMG/samsung_6.webp" width="200px">
+                </li>
+            </ul>
         </div>
     <div class="logo_playstation">
         <img src="./IMG/logo_playstation.png" width="300px" onclick="Logo_3()"><br>
@@ -78,22 +96,27 @@
         <ul>
             <li>
                 <h2>Playstation 5 Pro</h2>
-                <img src="./IMG/playstation_1.webp" width="300px">
+                <p><strong>400$</strong></p>
+                <img src="./IMG/playstation_1.webp" width="350px">
             </li>
             <li>
                 <h2>Mandos PS4</h2>
+                <p><strong>50$</strong></p>
                 <img src="./IMG/playstation_2.webp" width="300px">
             </li>
             <li>
                 <h2>Playstation 4 Slim</h2>
+                <p><strong>300$</strong></p>
                 <img src="./IMG/playstation_3.webp" width="300px">
             </li>
             <li>
                 <h2>The Last Of Us</h2>
-                <img src="./IMG/playstation_4.webp" width="300px">
+                <p><strong>60$</strong></p>
+                <img src="./IMG/playstation_4.webp" width="200px">
             </li>
             <li>
                 <h2>PlayStation Portal</h2>
+                <p><strong>100$</strong></p>
                 <img src="./IMG/playstation_5.webp" width="300px">
             </li>
         </ul>
@@ -105,14 +128,17 @@
         <ul>
             <li>
                 <h2>Iphone 13Pro</h2>
+                <p><strong>300$</strong></p>
                 <img src="./IMG/Imagen_iphone_1.avif" width="300px">
             </li>
             <li>
                 <h2>iPad Pro</h2>
+                <p><strong>370$</strong></p>
                 <img src="./IMG/iphone_1.jpg" width="300px">
             </li>
             <li>
                 <h2>Ipad iOS 12</h2>
+                <p><strong>420$</strong></p>
                 <img src="./IMG/iphone_2.jpg" width="300px">
             </li>
         </ul>
